--- a/raw/page.html
+++ b/raw/page.html
@@ -18,8 +18,8 @@
     <meta name="DC.Relation" content="內政部警政署防空疏散避難專區" />
     <meta name="DC.Source" content="內政部警政署防空疏散避難專區" />
     <meta name="DC.Language" content="中文" />
-    <meta name="DC.coverage.t.min" content="2024-06-05" />
-    <meta name="DC.coverage.t.max" content="2024-06-05" />
+    <meta name="DC.coverage.t.min" content="2024-10-15" />
+    <meta name="DC.coverage.t.max" content="2024-10-15" />
     <meta name="DC.Rights" content="內政部警政署防空疏散避難專區" />
     <meta name="Category.Theme" content="170" />
     <meta name="Category.Cake" content="140" />
@@ -247,14 +247,14 @@
         </div>
                         <div class="detail">
                 <div class="info">
-                                                                                     <p class="color02"> 更新日期：113-06-05</p>
-                                                                                                                                                              <p class="color01"> 發布單位：民防指揮管制所警務科</p>
+                                                                                     <p class="color02"> 更新日期：113-07-09</p>
+                                                                                                                                                              <p class="color01"> 發布單位：民防指揮管制所</p>
                                                   </div>
             </div>
                         <div class="editor"><div class="ed_model02 clearfix mb-5">
 <div class="ed_flex_box">
 <div class="box">
-<div class="ed_pic"><img alt="1130605防空避難指引(單張範本)" src="/userfiles/chcdo/images/20240605091213702.JPG" /></div>
+<div class="ed_pic"><img alt="1130605防空避難指引(單張範本)" src="/userfiles/chcdo/images/20240704101248684.jpeg" /></div>
 </div>
 </div>
 </div>
@@ -603,7 +603,7 @@ In war time or war will occur, you can use above information to take refuge as s
         </div>
         <div class="Update">
             <div class="container">
-                            <p>更新日期：113-06-05</p>
+                            <p>更新日期：113-07-09</p>
                         </div>
         </div>
     </footer>
